@@ -13,3 +13,7 @@ fieldset.operaprefsection {
     margin-right: 1.4em;
     margin-left: 0.4em;
 }
+div.editsection {
+	float: left;
+	margin-right: 5px;
+}
