@@ -41,6 +41,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   This isn't a good permanent fix.
 * (bug 6918) Stopped borders and backgrounds from showing through floated
   tables in Monobook
+* (bug 6868) Un-hardcode section edit link style
 
 == Languages updated ==
 
